tests/toy/neg/001069_mutation.toylang
program a = { if a then sleep int sleep; } .
